
[package]
name = "waf-manager"
version = "0.1.0"
description = "WAF配置管理器"
authors = ["你的名字 <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/waf-manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.0"
pingora = { version = "0.6.0", optional = true }
async-trait = "0.1"
env_logger = "0.10"
# 网络和HTTP相关
reqwest = { version = "0.11", features = ["json"], optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
pingora = ["dep:pingora"]

